<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Permission Pilot</string>
    <string name="app_name_upgraded_template">%1$s %2$s</string>
    <string name="label_help">Help</string>
    <string name="general_error_label">Error</string>
    <string name="general_load_error_title">Couldn\'t load data</string>
    <string name="general_load_error_hint">Something went wrong while scanning your installed apps.</string>
    <string name="general_refresh_error_hint">Refresh failed.</string>
    <string name="general_retry_action">Retry</string>
    <string name="general_share_action">Share</string>
    <string name="general_done_action">Done</string>
    <string name="general_open_action">Open</string>
    <string name="general_continue_action">Continue</string>
    <string name="general_no_action">No</string>
    <string name="debug_debuglog_record_action">Record</string>
    <string name="settings_category_other_label">Other</string>
    <string name="settings_category_gethelp_label">Get help</string>
    <string name="settings_category_debug_label">Debug</string>
    <string name="settings_category_advanced_label">Advanced</string>
    <string name="general_settings_label">General</string>
    <string name="general_settings_desc">General tweaks that affect the whole app.</string>
    <string name="general_settings_scan_speed_label">Scan speed</string>
    <string name="general_settings_scan_speed_desc">Controls parallel operations when scanning apps. Higher values are faster but may cause crashes on some devices.</string>
    <string name="general_settings_scan_speed_auto">Auto (recommended)</string>
    <string name="general_settings_scan_speed_1">1 (safest)</string>
    <string name="general_settings_scan_speed_2">2</string>
    <string name="general_settings_scan_speed_3">3</string>
    <string name="general_settings_scan_speed_4">4 (fastest)</string>
    <string name="changelog_label">Changelog</string>
    <string name="settings_acknowledgements_label">Acknowledgements</string>
    <string name="general_thank_you_label">Thank you</string>
    <string name="settings_licenses_label">Licenses</string>
    <string name="settings_privacy_policy_label">Privacy policy</string>
    <string name="settings_privacy_policy_desc">Handling data responsibly.</string>
    <string name="settings_support_label">Support</string>
    <string name="documentation_label">Documentation</string>
    <string name="discord_label">Discord</string>
    <string name="discord_description">A place to hang out in and ask questions.</string>
    <string name="issue_tracker_label">Issue tracker</string>
    <string name="issue_tracker_description">A public issue tracker for bug reports and feature requests.</string>
    <string name="faq_label">FAQ</string>
    <string name="faq_description">Frequently asked questions and common solutions.</string>
    <string name="acks_maxpatchs_desc">Thanks for the lovely icons.</string>
    <string name="acks_crowdin_desc">For supporting translation of open-source projects.</string>
    <string name="permissions_page_label">Permissions</string>
    <string name="apps_page_label">Apps</string>
    <string name="app_type_system_label">System App</string>
    <string name="permission_type_aosp_label">AOSP</string>
    <string name="apps_permission_unknown_description">Unknown permission. It is requested by this app, but no other app declares it.</string>
    <string name="permissions_unknown_description">Unknown permission. It is requested by apps, but not declared anywhere.</string>
    <string name="permissions_app_type_declaring_description">Permission is created by this app.</string>
    <string name="permissions_app_type_requesting_description">App requests the permission.</string>
    <string name="general_filter_action">Filter</string>
    <string name="general_cancel_action">Cancel</string>
    <string name="apps_filter_userapps_label">User Apps</string>
    <string name="apps_filter_systemapps_label">System Apps</string>
    <string name="apps_filter_nointernet_label">No internet</string>
    <string name="apps_filter_sideloaded_label">Manually installed</string>
    <string name="apps_filter_gplay_label">Google Play Store</string>
    <string name="apps_filter_oemstore_label">OEM Store</string>
    <string name="apps_sort_permissions_granted_label">Granted permissions</string>
    <string name="apps_sort_permissions_requested_label">Requested permissions</string>
    <string name="apps_sort_permissions_declared_label">Declared permissions</string>
    <string name="apps_sort_app_name_label">App name</string>
    <string name="apps_sort_install_date_label">Install date</string>
    <string name="apps_sort_update_date_label">Last updated</string>
    <string name="general_sort_action">Sort</string>
    <plurals name="apps_permissions_x_of_x_granted">
        <item quantity="one">%1$d of %2$d granted.</item>
        <item quantity="other">%1$d of %2$d granted.</item>
    </plurals>
    <plurals name="apps_permissions_x_requested">
        <item quantity="one">%1$d permission requested.</item>
        <item quantity="other">%1$d permissions requested.</item>
    </plurals>
    <plurals name="apps_permissions_declares_x">
        <item quantity="one">Declares %1$d permission.</item>
        <item quantity="other">Declares %1$d permissions.</item>
    </plurals>
    <string name="apps_details_installer_label">Install source</string>
    <string name="apps_details_installer_unknown_label">Information not available</string>
    <string name="apps_details_open_settings_error">Could not open app settings for this profile</string>
    <string name="apps_details_open_app_error">Could not open this app</string>
    <string name="permissions_filter_manifest_label">AOSP permissions</string>
    <string name="permissions_filter_system_label">Declared by system app</string>
    <string name="permissions_filter_user_label">Declared by user app</string>
    <string name="permissions_filter_runtime_label">Requested at runtime</string>
    <string name="permissions_filter_special_label">Special usage</string>
    <string name="permissions_filter_installtime_label">Granted automatically</string>
    <string name="permissions_filter_installtime_hide_label">Not granted automatically</string>
    <string name="permissions_filter_sort_action">Filter &amp; Sort</string>
    <string name="permissions_filter_section_source">Source</string>
    <string name="permissions_filter_section_type">Type</string>
    <string name="permissions_filter_section_sort_by">Sort by</string>
    <string name="filter_granted_label">Granted</string>
    <string name="filter_denied_label">Denied</string>
    <string name="filter_configurable_label">Configurable</string>
    <string name="permissions_sort_apps_granted_label">Number of granted apps</string>
    <string name="permissions_sort_apps_requested_label">Number of requested apps</string>
    <string name="permissions_search_list_hint">Search permissions</string>
    <string name="apps_search_list_hint">Search apps</string>
    <string name="permissions_details_protection_label">Protection level</string>
    <string name="permissions_protection_type_normal_label">Normal</string>
    <string name="permissions_protection_type_dangerous_label">Dangerous</string>
    <string name="permissions_protection_type_signature_label">Signature</string>
    <string name="permissions_protection_type_signatureorsystem_label">Signature or system</string>
    <string name="permissions_protection_type_internal_label">Internal</string>
    <string name="permissions_protection_type_unknown_label">Unknown</string>
    <string name="permissions_permission_details_label">Permission details</string>
    <string-array name="generic_loading_labels">
        <item>Soon™</item>
        <item>Passing the butter</item>
        <item>Downloading more RAM</item>
        <item>Still faster than an iPhone</item>
        <item>The CPU is on a coffee break</item>
        <item>Awaiting data from Pepe Silvia</item>
        <item>Turbo encabulator is initiating</item>
        <item>Almost there… probably</item>
        <item>Pretending to look busy</item>
        <item>Warming up the hamster wheel</item>
        <item>Convincing apps to cooperate</item>
        <item>Asking permissions politely</item>
        <item>Your apps are lawyering up</item>
        <item>Reading the fine print</item>
    </string-array>
    <string name="apps_app_details_label">App Details</string>
    <string name="apps_details_shareduserid_label">Apps with Shared User ID</string>
    <string name="apps_details_siblings_label">Siblings</string>
    <string name="apps_known_installer_gplay_label">Google Play Store</string>
    <string name="apps_known_installer_vivo_label">Vivo V-AppStore</string>
    <string name="apps_known_installer_oppo_label">Oppo App Market</string>
    <string name="apps_known_installer_huawei_label">Huawei AppGallery</string>
    <string name="apps_known_installer_samsung_label">Samsung Galaxy Store</string>
    <string name="apps_known_installer_xiaomi_label">Xiaomi GetApps</string>
    <string name="apps_known_installer_fdroid_label">F-Droid</string>
    <string name="apps_known_android_system_label">Android System</string>
    <string name="apps_list_subtitle_format">%1$s · %2$s</string>
    <string name="apps_list_updated_label">Updated %1$s</string>
    <string name="apps_list_installer_sideloaded_label">Manually installed</string>
    <string name="apps_list_installer_preinstalled_label">Pre-installed</string>
    <string name="apps_list_empty_message">No apps to show.</string>
    <string name="apps_list_empty_search_message">No apps match your search.</string>
    <string name="general_refresh_action">Refresh</string>
    <string name="general_expand_all_action">Expand all</string>
    <string name="general_collapse_all_action">Collapse all</string>
    <string name="general_more_options_action">More options</string>
    <string name="apps_details_twins_label">Clones</string>
    <string name="apps_details_twins_descriptions">Installed in other user profile(s).</string>
    <string name="install_date_label">Install date</string>
    <string name="apps_filter_sharedid_label">Shared User ID</string>
    <string name="apps_filter_multipleprofiles_label">Has clones</string>
    <string name="support_debuglog_label">Debug log</string>
    <string name="support_debuglog_desc">Record everything the app is doing into a text file that you can share.</string>
    <string name="updated_at_x">Last updated: %s</string>
    <string name="installed_at_x">First installed: %s</string>
    <string name="apps_sort_install_source_label">Install source</string>
    <string name="permissions_action_none_msg">No action available for this permission</string>
    <string name="overview_device_android_version_label">Android version</string>
    <string name="overview_device_name_label">Device</string>
    <string name="overview_device_android_patch_label">Patch level</string>
    <string name="overview_summary_apps_active_profile_label">Apps in Active Profile</string>
    <string name="overview_summary_apps_other_profile_label">Apps in Managed User Profile(s), excluding Clones</string>
    <string name="overview_summary_apps_sideloaded_label">Apps manually installed from external sources</string>
    <string name="overview_summary_apps_installers_label">Apps with \'Install from Unknown Sources\' enabled</string>
    <string name="overview_summary_apps_overlayers_label">Apps that can \'Appear on Top\'</string>
    <string name="overview_summary_apps_offline_label">Apps that have \'No Internet\' permissions</string>
    <string name="overview_summary_apps_clones_label">Apps with clones in other profiles</string>
    <string name="overview_summary_apps_sharedids_label">Apps with SharedUserID</string>
</resources>